--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Material Components for the web</title>
+  <title>Affordable Web Design and Mobile App Development - TopeySoft Computers</title>
   <!-- <link rel="stylesheet"
           href="node_modules/material-components-web/dist/material-components-web.css">
     <link rel="stylesheet"
@@ -36,7 +36,7 @@
            </a>
               </li>
               <li>
-                <a href="#pricing">
+                <a href="#get-started">
               Pricing
            </a>
               </li>
@@ -58,7 +58,7 @@
       <img src="images/devices.png" class="devices img-fluid"></img>
     </div>
   </section>
-  <section class="custom-designs gray">
+  <section id="showcase" class="custom-designs gray">
     <div class="container">
       <h5 class="pb-3 text-center">Custom designs for your unique business needs </h5>
       <div class="row">
@@ -89,14 +89,14 @@
     </div>
   </section>
 
-  <section class="custom-designs">
+  <section id="process" class="custom-designs">
     <div class="container">
       <h5 class="pb-3 text-center">Easy and straight forward process</h5>
       <p class="text-center">Our development process is designed to aleveiate unecessary complexities. We understand how important it is that you
         spend more of your time and focus on your business. The process is as simple as outlined below: </p>
       <br />
       <div class="timeline row">
-        <div class="col-lg-4">
+        <div class="col-lg-4 h-lg-100">
           <div class="timeline-item mt-2">
             <h5 class="">1. Get Started</h5>
             <p>Answer a few basic questions for us to get to know you. You can also give us a call to discuss your specific
@@ -125,7 +125,7 @@
 
   </section>
 
-  <footer class="bg-secondary text-white">
+  <footer id="get-started" class="bg-secondary text-white">
     <div class="container text-center  pt-5 pb-5">
       <hr />
       <h5>
@@ -145,7 +145,7 @@
             &#x2709;
         </span>
         <span class="col-xs-11">
-        <a class="text-white" href="mailto:info@topeysoft.com">info@topeysoft.com</a><br>
+        <a class="text-white" href="mailto:temi@topeysoft.com">temi@topeysoft.com</a><br>
       </span>
       </div>
 
