--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,34 @@
     <link rel="stylesheet"
           href="node_modules/bootstrap/dist/css/bootstrap.min.css">-->
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.2/css/mdb.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="/styles/main.css">
+
+   <script>
+      function getStarted(){
+        var xhr = new XMLHttpRequest();
+        xhr.onreadystatechange = function() {
+          if (xhr.readyState == XMLHttpRequest.DONE) {
+            var token =xhr.responseText;
+            console.log('CLIENT_TOKEN_READY', token);
+            var button = document.querySelector('#submit-button');
+            braintree.dropin.create({
+              authorization: token,
+              container: '#dropin-container'
+            }, function (createErr, instance) {
+              button.addEventListener('click', function () {
+                instance.requestPaymentMethod(function (err, payload) {
+                  // Submit payload.nonce to your server\n
+                });
+              });
+            });
+          }
+        }
+        xhr.open('GET', 'https://my.elyir.local:8443/59062e028631a043f468fc73/client_token', true);
+        xhr.send(null);
+      }
+      </script>
 </head>
 
 <body>
@@ -55,7 +81,22 @@
     <div class="container text-center">
 
       <h5 class=" pt-5 pb-0">Affordable and Professionally Crafted Web and Mobile Applications</h5>
-      <img src="images/devices.png" class="devices img-fluid"></img>
+      <img src="/images/devices.png" class="devices img-fluid"></img>
+
+      <p class="text-center p-5">
+        <button id="submit-button" data-toggle="modal" data-target=".bd-example-modal-lg" onclick="getStarted()" class="btn btn-primary btn-lg" >Get Started</button>
+      </p>
+     
+
+      <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div id="dropin-container">
+              
+                    </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <section id="showcase" class="custom-designs gray">
@@ -163,6 +204,14 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/material-components-web/dist/material-components-web.js"></script>
     <script>mdc.autoInit()</script> -->
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.2/js/mdb.min.js"></script>
+    <script src="https://js.braintreegateway.com/web/dropin/1.6.1/js/dropin.min.js"></script>
+  
 </body>
 
 </html>
