--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet"
           href="node_modules/bootstrap/dist/css/bootstrap.min.css">-->
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.2/css/mdb.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/dist/css/main.min.css">
 
    <script>
       function getStarted(){
@@ -211,6 +212,7 @@
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.2/js/mdb.min.js"></script>
     <script src="https://js.braintreegateway.com/web/dropin/1.6.1/js/dropin.min.js"></script>
+    <script src="/dist/js/scripts.min.js"></script>
   
 </body>
 
