--- a/public/plugins/form-wizard/index.html
+++ b/public/plugins/form-wizard/index.html
@@ -255,7 +255,7 @@
                         </div>
                         <div id="fix-break-point" ></div>
 
-                        <div class="wizard-footer d-md-none">
+                        <div class="wizard-footer mt-4 d-md-none border border-left-0 border-right-0 border-bottom-0">
                             <div class="row bg-white ">
                                 <div class="col-auto text-left">
                                     <button id="wiz-back" class="btn btn-secondary btn-lg">&larr; <span class="text d-none  d-sm-inline"> Back</span></button>
