--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
            </a>
               </li>
               <li>
-                <a href="#get-started">
+                <a href="/plugins/user-account/#get-started">
               Get Started
            </a>
               </li>
@@ -85,7 +85,7 @@
       <img src="/images/devices.png" class="devices img-fluid"></img>
 
       <p class="text-center p-5">
-        <button id="submit-button" data-toggle="modal" data-target=".bd-example-modal-lg" onclick="getStarted()" class="btn btn-primary btn-lg" >Get Started</button>
+        <a href="/plugins/user-account/" data-target=".bd-example-modal-lg"  class="btn btn-primary btn-lg" >Get Started</a>
       </p>
      
 
