--- a/public/my-account/index.html
+++ b/public/my-account/index.html
@@ -18,9 +18,7 @@
   <link rel="stylesheet" href="/dist/css/main.min.css">
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.3.0/firebaseui.css" />
   
-   <script>
-      window.requireUserLogin=true;
-      </script>
+  
 </head>
 
 <body>
@@ -59,94 +57,18 @@
       </div>
     </div>
   </header>
-  <section>
-    <div class="container text-center">
-
-      <h5 class=" pt-5 pb-0">Affordable and Professionally Crafted Web and Mobile Applications</h5>
-      <img src="/images/devices.png" class="devices img-fluid"></img>
-
-      <p class="text-center p-5">
-        <a href="/plugins/user-account/" data-target=".bd-example-modal-lg"  class="btn btn-primary btn-lg" >Get Started</a>
-      </p>
-     
-
-      <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div id="dropin-container">
-              
-                    </div>
+  <section class="main-section" >
+      <div class="container text-center">
+        <div class="row justify-content-md-center">
+          <div class=" col-12 col-md-6 col-xl-4 ">
+  
+  
+              <div id="user-account-div" class="user-account-div"><div class="text-muted lead text-center">User account placeholder</div></div>
           </div>
         </div>
+  
       </div>
-    </div>
-  </section>
-  <section id="showcase" class="custom-designs gray">
-    <div class="container">
-      <h5 class="pb-3 text-center">Custom designs for your unique business needs </h5>
-      <div class="row">
-        <div class="col-lg-6  mb-4">
-          <div class="  mr-lg-2 showcase-card">
-            <h5>Political Campaign</h5>
-          </div>
-        </div>
-        <div class="col-lg-6  mb-4 ">
-          <div class="   ml-lg-2 showcase-card">
-            <h5>Beauty Shop</h5>
-          </div>
-        </div>
-        <div class="col-lg-6  mb-4">
-          <div class="   mr-lg-2 showcase-card">
-            <h5>Cleaning Service</h5>
-          </div>
-        </div>
-        <div class="col-lg-6  mb-4">
-          <div class="   ml-lg-2 showcase-card">
-            <h5>Photography</h5>
-          </div>
-        </div>
-        <div class="col-12 text-center pt-5">
-          <h5>See more designs in our showcase &rarr;</h5>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="process" class="custom-designs">
-    <div class="container">
-      <h5 class="pb-3 text-center">Easy and straight forward process</h5>
-      <p class="text-center">Our development process is designed to aleveiate unecessary complexities. We understand how important it is that you
-        spend more of your time and focus on your business. The process is as simple as outlined below: </p>
-      <br />
-      <div class="timeline row">
-        <div class="col-lg-4 h-lg-100">
-          <div class="timeline-item mt-2">
-            <h5 class="">1. Get Started</h5>
-            <p>Answer a few basic questions for us to get to know you. You can also give us a call to discuss your specific
-              needs. </p>
-          </div>
-        </div>
-
-
-        <div class="col-lg-4">
-          <div class="timeline-item mt-2">
-            <h5>2. Discuss requirements</h5>
-            <p>Answer a few basic questions for us to get to know you. You can also give us a call to discuss your specific
-              needs. </p>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="timeline-item mt-2">
-            <h5>3. Deliver product with continous support</h5>
-            <p>Once we have all the requirements and we both agree on proposed designs and payments options, we will... </p>
-          </div>
-        </div>
-      </div>
-      <div class="text-center p-3">Click here to view our detailed design process</div>
-    </div>
-
-  </section>
+    </section>
 
   <footer id="get-started" class="bg-secondary text-white">
     <div class="container text-center  pt-5 pb-5">
