--- a/public/plugins/user-account/index.html
+++ b/public/plugins/user-account/index.html
@@ -42,8 +42,8 @@
   <!-- <script src="https://cdn.firebase.com/libs/firebaseui/2.3.0/firebaseui.js"></script> -->
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.3.0/firebaseui.css" />
 
-  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase-auth.js"></script>
   <!-- <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase-messaging.js"></script> -->
 
@@ -96,9 +96,7 @@
         <div class=" col-12 col-md-6 col-xl-4 ">
 
 
-          <div class="user-account-div">
-            
-          </div>
+            <div id="user-account-div" class="user-account-div"><div class="text-muted lead text-center">User account placeholder</div></div>
         </div>
       </div>
 
