--- a/public/index.html
+++ b/public/index.html
@@ -24,33 +24,38 @@
 </head>
 
 <body>
-  <header>
+  <header id="main-header">
     <div class="container">
       <div class="row">
         <div class="col-md-4 text-center   text-lg-left">
-          <a class="main-brand" href="#main-brand">TopeySoft</a>
+          <a class="main-brand" href="/">TopeySoft</a>
         </div>
         <div class="col-md-8">
           <nav class="main-nav float-md-right text-truncate ">
             <ul>
               <li>
-                <a href="#process">
-              Our process
+                <a href="/features">
+              Features
            </a>
               </li>
               <li>
-                <a href="#showcase">
-              Showcase
+                <a href="/showcase">
+              Templates
            </a>
               </li>
               <li>
-                <a href="#get-started">
+                <a href="/pricing">
               Pricing
            </a>
               </li>
               <li>
-                <a href="/plugins/user-account/#get-started">
+                <a href="/get-started">
               Get Started
+           </a>
+              </li>
+              <li>
+                <a href="/my-account">
+              My Account
            </a>
               </li>
             </ul>
