--- a/public/plugins/form-wizard/index.html
+++ b/public/plugins/form-wizard/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="main-header">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 text-center   text-lg-left">
