--- a/public/plugins/user-account/index.html
+++ b/public/plugins/user-account/index.html
@@ -54,7 +54,7 @@
 </head>
 
 <body class="d-flex  flex-column justify-content-between">
-  <header>
+  <header id="main-header">
     <div class="container">
       <div class="row">
         <div class="col-md-4 text-center   text-lg-left">
