--- a/public/plugins/form-wizard/index.html
+++ b/public/plugins/form-wizard/index.html
@@ -33,7 +33,7 @@
 
 </head>
 
-<body>
+<body class="d-flex flex-column  justify-content-between">
     <header id="main-header">
         <div class="container">
             <div class="row">
@@ -267,7 +267,7 @@
     <script src="/plugins/user-account/dist/js/scripts.min.js"></script>
     <script src="/dist/js/scripts.min.js"></script>
     <script type="text/javascript" src="./dist/js/scripts.min.js"></script>
-
+    
 
 </body>
 
