--- a/public/plugins/user-account/index.html
+++ b/public/plugins/user-account/index.html
@@ -91,15 +91,14 @@
   </header>
 
   <section class="main-section" >
+     <!-- Plugin content start -->
     <div class="container text-center">
       <div class="row justify-content-md-center">
         <div class=" col-12 col-md-6 col-xl-4 ">
-
-
-            <div id="user-account-div" class="user-account-div"><div class="text-muted lead text-center">User account placeholder</div></div>
+            <div id="user-account-div" class="user-account-div"><div class="text-muted lead text-center"><img src="https://s3-us-west-2.amazonaws.com/tscdms/shared/loaders/earth-64.png" /></div></div>
         </div>
       </div>
-
+ <!-- Plugin content end -->
     </div>
   </section>
 
