--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
   
    <script>
       window.requireUserLogin=true;
+      const project_id = '59062e028631a043f468fc73';
       </script>
 </head>
 
