--- a/public/plugins/user-account/index.html
+++ b/public/plugins/user-account/index.html
@@ -49,8 +49,8 @@
 
   <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
   <script>
-
-  </script>
+      const project_id = '59062e028631a043f468fc73';
+      </script>
 </head>
 
 <body class="d-flex  flex-column justify-content-between">
