--- a/public/plugins/form-wizard/index.html
+++ b/public/plugins/form-wizard/index.html
@@ -30,7 +30,9 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
-
+    <script>
+        const project_id = '59062e028631a043f468fc73';
+        </script>
 </head>
 
 <body class="d-flex flex-column  justify-content-between">
